consumer of pub sub. not yet working

--- a/compose/app_consumer/supervisord.conf
+++ b/compose/app_consumer/supervisord.conf
@@ -14,7 +14,7 @@ serverurl = unix:///var/run/supervisor.sock
 
 [program:celery-worker-consumer]
 directory=/app
-command=/usr/local/bin/celery --app=config.celery:app worker --loglevel=INFO -f /var/log/celery.log --autoscale=10,0
+command=/usr/local/bin/celery --app=config.celery:celery worker --loglevel=INFO -f /var/log/celery.log --autoscale=10,0
 autostart=true
 autorestart=true
 numprocs=1
